重写example
